--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,8 @@
         {% for breadcrumb_page in site.pages %}
             {% if current_breadcrumb_url == breadcrumb_page.url or current_breadcrumb_md_url == breadcrumb_page.url  %}
                 <li {% if i == forLoopMaxInt %}class="active"{% endif %}>
-                    <a href="{{ site.baseurl }}{{breadcrumb_page.url}}">{{breadcrumb_page.breadcrumb}}</a>
+		    {% capture breadcrumb_page_page_url_without_index_html %}{{ breadcrumb_page.url | remove: "index.html" }}{% endcapture %}
+                    <a href="{{ site.baseurl }}{{breadcrumb_page_page_url_without_index_html}}">{{breadcrumb_page.breadcrumb}}</a>
                 </li>
             {% endif %}
         {% endfor %}
