trying jims addition to fix footer breadcrumb

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,7 @@
             {% for i in (1..forLoopMaxInt) %}
                 {% capture current_breadcrumb_url %}{{next_prepender}}/{{ splitted_url_parts[i] }}/index.html{% endcapture %}
                 {% capture current_breadcrumb_md_url %}{{next_prepender}}/{{ splitted_url_parts[i] }}/{% endcapture %}
+                {% assign next_prepender = "" %}
                 {% capture next_prepender %}{{next_prepender}}/{{ splitted_url_parts[i] }}{% endcapture %}
                 {% for breadcrumb_page in site.pages %}
                     {% if current_breadcrumb_url == breadcrumb_page.url or current_breadcrumb_md_url == breadcrumb_page.url  %}
