--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
-          <p><a href="http://comsysto.com/imprint.html">Impressum</a></p>
+          <p><a href="https://comsysto.com/impressum/">Impressum</a></p>
       </div>
 
       <div class="footer-col  footer-col-3">
@@ -18,27 +18,6 @@
 
               <span class="username">{{ site.github_username }}/jekyll-breadcrumb-for-github-pages</span>
             </a>
-            <hr>
-            <ol class="breadcrumb">
-            <li><a href="{{ site.baseurl }}/">Home</a></li>
-            {% capture page_url_without_index_html %}{{ page.url | remove: "/index.html" }}{% endcapture %}
-            {% assign splitted_url_parts = page_url_without_index_html | split: '/' %}
-            {% capture forLoopMaxInt %}{{ splitted_url_parts.size | minus:1 }}{% endcapture %}
-            {% for i in (1..forLoopMaxInt) %}
-                {% capture current_breadcrumb_url %}{{next_prepender}}/{{ splitted_url_parts[i] }}/index.html{% endcapture %}
-                {% capture current_breadcrumb_md_url %}{{next_prepender}}/{{ splitted_url_parts[i] }}/{% endcapture %}
-                {% assign next_prepender = "" %}
-                {% capture next_prepender %}{{next_prepender}}/{{ splitted_url_parts[i] }}{% endcapture %}
-                {% for breadcrumb_page in site.pages %}
-                    {% if current_breadcrumb_url == breadcrumb_page.url or current_breadcrumb_md_url == breadcrumb_page.url  %}
-                        <li {% if i == forLoopMaxInt %}class="active"{% endif %}>
-                    {% capture breadcrumb_page_page_url_without_index_html %}{{ breadcrumb_page.url | remove: "index.html" }}{% endcapture %}
-                            <a href="{{ site.baseurl }}{{breadcrumb_page_page_url_without_index_html}}">{{breadcrumb_page.breadcrumb}}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            {% endfor %}
-            </ol>
         </p>
       </div>
     </div>
