--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,12 @@
         {% capture current_breadcrumb_md_url %}{{next_prepender}}/{{ splitted_url_parts[i] }}/{% endcapture %}
         {% capture next_prepender %}{{next_prepender}}/{{ splitted_url_parts[i] }}{% endcapture %}
         {% for breadcrumb_page in site.pages %}
-            {% if current_breadcrumb_url == breadcrumb_page.url or current_breadcrumb_md_url == breadcrumb_page.url  %}
-                <li {% if i == forLoopMaxInt %}class="active"{% endif %}>
-		    {% capture breadcrumb_page_page_url_without_index_html %}{{ breadcrumb_page.url | remove: "index.html" }}{% endcapture %}
+
+            {% if current_breadcrumb_url == breadcrumb_page.url or
+                  current_breadcrumb_md_url == breadcrumb_page.url %}
+                {% capture breadcrumb_page_page_url_without_index_html %}{{ breadcrumb_page.url | remove: "index.html" }}{% endcapture %}
+                    {% assign j = forLoopMaxInt | plus: 0 %}
+                    <li {% if i == j %}class="active"{% endif %}>
                     <a href="{{ site.baseurl }}{{breadcrumb_page_page_url_without_index_html}}">{{breadcrumb_page.breadcrumb}}</a>
                 </li>
             {% endif %}
