--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,8 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
-          <p><a href="https://comsysto.com/impressum/">Impressum</a></p>
+          <p><a href="https://legal.comsysto.com/comsysto.github.io/de/impressum/">Impressum</a></p>
+          <p><a href="https://legal.comsysto.com/comsysto.github.io/de/datenschutz/">Datenschutzerklärung</a></p>
       </div>
 
       <div class="footer-col  footer-col-3">
